Update README.md to remove Swing UI notes and clarify JavaFX implementation